

                          avrtest NEWS
                          ============

* Support a new syscall avrtest_abort_2nd_hit() that       r318  2023-05-26
  calls abort if it is executed more than once.  This
  is useful for programs that go haywire and execute
  startup code more than once.  The startup code in
  dejagnuboards/exit.c now calls this syscall.

* Support a new option -s SIZE that specifies the          r316  2023-05-26
  flash size in bytes of the simulation.  SIZE is
  used when the program counter needs wrap-around.

* Add some rudimentary check that the supplied ELF         r314  2023-05-19
  executable matches the architecture and PC size
  of the simulation.

* Option -m MAXCOUNT now handles 64-bit numbers            r306  2022-09-19
  correctly.

* Support new command line option -flush that              r303  2022-09-19
  flushes the host's stdout stream for each call of
  avrtest_putchar (syscall 29).

* Support logging of 64-bit floating point values:         r292  2019-12-16

  -  LOG_DOUBLE (X)
  -  LOG_LDOUBLE (X)
  -  LOG_D64 (X)
  
  and respective macros with custom format string.
  For details, see README.

* Add basic support for stdio.h functions to interact      r265  2019-11-19
  with the host's file system has been added.  The files
  that are to be accessed must be located in a sandbox
  folder specified by the new command line option

      -sbox SANDBOX

  A new target module fileio.c has been added that
  provides implementation of functions like:

      fopen, fclose, feof, fflush, clearerr, fopen,
      fread, fwrite

  from stdio.h.  In addition, the new module provides
  functions that use file handles in place of FILE*
  pointers.  For details see the README file.


* Add support to push the current state of instruction     r221  2019-08-25
  logging to an internal stack in the simulator.
  The state can be popped back when needed.  Support is
  available from the avrtest_log family and available by