@@ -34,7 +34,7 @@
 
 static const char USAGE[] =
   "  usage: avrtest [-d] [-e ENTRY] [-m MAXCOUNT] [-mmcu=ARCH] [-s size]\n"
-  "                 [-no-log] [-no-stdin] [-no-stdout] \n"
+  "                 [-no-log] [-no-stdin] [-no-stdout] [-no-stderr]\n"
   "                 [-q] [-flush] [-runtime]\n"
   "                 [-graph[=FILE]] [-sbox=FOLDER]\n"
   "                 program [-args [...]]\n"
@@ -58,10 +58,12 @@ static const char USAGE[] =
   "                the running program, cf. README.\n"
   "  -no-stdin     Disable avrtest_getchar (syscall 28) from avrtest.h.\n"
   "  -no-stdout    Disable avrtest_putchar (syscall 29) from avrtest.h.\n"
-  "  -flush        Flush the host's stdout stream after each call of\n"
-  "                avrtest_putchar (syscall 29).\n"
+  "  -no-stderr    Disable avrtest_putchar_stderr (syscall 24).\n"
+  "  -flush        Flush the host's stdout resp. stderr stream after each\n"
+  "                (direct or indirect) call of avrtest_putchar (syscall 29)\n"
+  "                resp. avrtest_putchar_stderr (syscall 24).\n"
   "  -sbox SANDBOX Provide the path to SANDBOX, which is a folder that the\n"
-  "                target program can access via file i/o (syscall 26).\n"
+  "                target program can access via file I/O (syscall 26).\n"
   "  -graph[=FILE] Write a .dot FILE representing the dynamic call graph.\n"
   "                For the dot tool see  http://graphviz.org\n"
   "  -graph-help   Show more options to control graph generation and exit.\n"
