@@ -71,6 +71,9 @@ AVRTEST_OPT (stdin, 1, stdin)
 // Whether STDOUT_PORT is active
 AVRTEST_OPT (stdout, 1, stdout)
 
+// Whether STDERR_PORT is active
+AVRTEST_OPT (stderr, 1, stderr)
+
 // Whether avrtest_putchar (syscall 29) flushes the host's stdout.
 AVRTEST_OPT (flush, 0, flush)
 
